syntax = "proto3";

package lnmux;

option go_package = "github.com/bottlepay/lnmux/lnmuxrpc";

service Service {
    rpc GetInfo (GetInfoRequest) returns (GetInfoResponse);

    rpc AddInvoice (AddInvoiceRequest) returns (AddInvoiceResponse);

    rpc SubscribeInvoiceAccepted (SubscribeInvoiceAcceptedRequest) returns (stream SubscribeInvoiceAcceptedResponse);

    rpc SettleInvoice (SettleInvoiceRequest) returns (SettleInvoiceResponse);

    rpc CancelInvoice (CancelInvoiceRequest) returns (CancelInvoiceResponse);
}

message GetInfoRequest {}

message GetInfoResponse {
    bytes pub_key = 1;
    string network = 2;
    repeated NodeInfo nodes = 3;
    bool auto_settle = 4;
}

message NodeInfo {
    bytes pub_key = 1;
}

message AddInvoiceRequest {
    int64 amt_msat = 1;
    string description = 2;
    bytes description_hash = 3;
    int64 expiry_secs = 4;
}

message AddInvoiceResponse {
    string payment_request = 1;
    bytes preimage = 2;
    bytes hash = 3;
}

message SubscribeInvoiceAcceptedRequest {}

message SubscribeInvoiceAcceptedResponse {
    bytes hash = 1;
}

message SettleInvoiceRequest {
    bytes hash = 1;
}

message SettleInvoiceResponse {}

message CancelInvoiceRequest {
    bytes hash = 1;
}

message CancelInvoiceResponse {}
